force-app/main/default/objects/Contact/fields/Collect_Insurance_policies__c.field-meta.xml
<CustomField>
    <fullName>Collect_Insurance_policies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collect Insurance policies</label>
    <type>Checkbox</type>
</CustomField>