force-app/main/default/objects/Contact/fields/Collect_Investments_Details__c.field-meta.xml
<CustomField>
    <fullName>Collect_Investments_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collect Investments Details</label>
    <type>Checkbox</type>
</CustomField>