force-app/main/default/objects/Contact/fields/Collect_Property_Documents__c.field-meta.xml
<CustomField>
    <fullName>Collect_Property_Documents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collect Property Documents</label>
    <type>Checkbox</type>
</CustomField>