force-app/main/default/objects/Contact/fields/Credit_Debt_Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Credit_Debt_Liabilities__c</fullName>
    <label>Credit Debt Liabilities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>