force-app/main/default/objects/Contact/fields/Estate_Planning_Product__c.field-meta.xml
<CustomField>
    <fullName>Estate_Planning_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Estate Planning Product</label>
    <type>Checkbox</type>
</CustomField>