force-app/main/default/objects/Contact/fields/Financial_Estate_Goal__c.field-meta.xml
<CustomField>
    <fullName>Financial_Estate_Goal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financial Estate Goal</label>
    <type>Checkbox</type>
</CustomField>