force-app/main/default/objects/Contact/fields/Financial_Growth_Goals__c.field-meta.xml
<CustomField>
    <fullName>Financial_Growth_Goals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Financial Goals Focused on Growth</description>
    <inlineHelpText>Financial Goals Focused on Growth</inlineHelpText>
    <label>Financial Growth Goals</label>
    <type>Checkbox</type>
</CustomField>