force-app/main/default/objects/Contact/fields/Financial_Income_Goal__c.field-meta.xml
<CustomField>
    <fullName>Financial_Income_Goal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financial Income Goal</label>
    <type>Checkbox</type>
</CustomField>