force-app/main/default/objects/Contact/fields/Financial_Tax_Planning_Goal__c.field-meta.xml
<CustomField>
    <fullName>Financial_Tax_Planning_Goal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financial Tax Planning Goal</label>
    <type>Checkbox</type>
</CustomField>