force-app/main/default/objects/Contact/fields/Income_from_Dividends__c.field-meta.xml
<CustomField>
    <fullName>Income_from_Dividends__c</fullName>
    <label>Income from Dividends</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>