force-app/main/default/objects/Contact/fields/Income_from_Rentals__c.field-meta.xml
<CustomField>
    <fullName>Income_from_Rentals__c</fullName>
    <label>Income from Rentals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>