force-app/main/default/objects/Contact/fields/Investment_in_Bonds__c.field-meta.xml
<CustomField>
    <fullName>Investment_in_Bonds__c</fullName>
    <label>Investment in Bonds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>