force-app/main/default/objects/Contact/fields/Investment_in_Mutual_Funds__c.field-meta.xml
<CustomField>
    <fullName>Investment_in_Mutual_Funds__c</fullName>
    <label>Investment in Mutual Funds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>