force-app/main/default/objects/Contact/fields/Investment_Products__c.field-meta.xml
<CustomField>
    <fullName>Investment_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Investment Products</label>
    <type>Checkbox</type>
</CustomField>