force-app/main/default/objects/Contact/fields/Investments_in_Real_Estates__c.field-meta.xml
<CustomField>
    <fullName>Investments_in_Real_Estates__c</fullName>
    <label>Investments in Real Estates</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>