force-app/main/default/objects/Contact/fields/Investments_in_Stocks__c.field-meta.xml
<CustomField>
    <fullName>Investments_in_Stocks__c</fullName>
    <label>Investments in Stocks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>