force-app/main/default/objects/Contact/fields/Loan_Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Loan_Liabilities__c</fullName>
    <label>Loan Liabilities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>