force-app/main/default/objects/Contact/fields/Net_Worth__c.field-meta.xml
<CustomField>
    <fullName>Net_Worth__c</fullName>
    <description>Estimated Net Worth</description>
    <inlineHelpText>Estimated Net Worth</inlineHelpText>
    <label>Net Worth (Estimated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>