force-app/main/default/objects/Contact/fields/Next_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Meeting_Date__c</fullName>
    <label>Next Meeting Date</label>
    <type>DateTime</type>
</CustomField>