force-app/main/default/objects/Contact/fields/Other_Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Other_Liabilities__c</fullName>
    <label>Other Liabilities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>