force-app/main/default/objects/Contact/fields/Portfolio_Strategy_Products__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Strategy_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portfolio Strategy Products</label>
    <type>Checkbox</type>
</CustomField>