force-app/main/default/objects/Contact/fields/Recommend_Consultation__c.field-meta.xml
<CustomField>
    <fullName>Recommend_Consultation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recommend Consultation</label>
    <type>Checkbox</type>
</CustomField>