force-app/main/default/objects/Contact/fields/Recommend_Estate_Succession_Planning__c.field-meta.xml
<CustomField>
    <fullName>Recommend_Estate_Succession_Planning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recommend Estate &amp; Succession Planning</label>
    <type>Checkbox</type>
</CustomField>