force-app/main/default/objects/Contact/fields/Recommend_Investment_Strategies__c.field-meta.xml
<CustomField>
    <fullName>Recommend_Investment_Strategies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recommend Investment Strategies</label>
    <type>Checkbox</type>
</CustomField>