force-app/main/default/objects/Contact/fields/Recommend_Risk_Management__c.field-meta.xml
<CustomField>
    <fullName>Recommend_Risk_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recommend Risk Management</label>
    <type>Checkbox</type>
</CustomField>