force-app/main/default/objects/Contact/fields/Recommend_Tax_Planning__c.field-meta.xml
<CustomField>
    <fullName>Recommend_Tax_Planning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recommend Tax Planning</label>
    <type>Checkbox</type>
</CustomField>