force-app/main/default/objects/Contact/fields/Rentals_Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Rentals_Liabilities__c</fullName>
    <label>Rentals Liabilities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>