force-app/main/default/objects/Contact/fields/Risk_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>Risk_Tolerance__c</fullName>
    <label>Risk Tolerance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>