force-app/main/default/objects/Contact/fields/Tax_Planning_Product__c.field-meta.xml
<CustomField>
    <fullName>Tax_Planning_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Planning Product</label>
    <type>Checkbox</type>
</CustomField>